--- a/website/src/css/design3.css
+++ b/website/src/css/design3.css
@@ -5,44 +5,10 @@
     Medium(500), Bold(700), Ultra-Bold(800), Black(900)
 ======================= */
 
-/* Thin */
-@font-face {
-    font-family: "GT-Walsheim";
-    src: url("/fonts/GT-Walsheim/GT-Walsheim-Thin-Trial.woff2") format("woff2");
-    font-weight: 100;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: "GT-Walsheim";
-    src: url("/fonts/GT-Walsheim/GT-Walsheim-Thin-Oblique-Trial.woff2") format("woff2");
-    font-weight: 100;
-    font-style: oblique;
-    font-display: swap;
-}
-
-/* Ultra-Light */
-@font-face {
-    font-family: "GT-Walsheim";
-    src: url("/fonts/GT-Walsheim/GT-Walsheim-Ultra-Light-Trial.woff2") format("woff2");
-    font-weight: 200;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: "GT-Walsheim";
-    src: url("/fonts/GT-Walsheim/GT-Walsheim-Ultra-Light-Oblique-Trial.woff2") format("woff2");
-    font-weight: 200;
-    font-style: oblique;
-    font-display: swap;
-}
-
 /* Light */
 @font-face {
     font-family: "GT-Walsheim";
-    src: url("/fonts/GT-Walsheim/GT-Walsheim-Light-Trial.woff2") format("woff2");
+    src: url("/fonts/GT-Walsheim/GT-Walsheim-LC-Light.woff2") format("woff2");
     font-weight: 300;
     font-style: normal;
     font-display: swap;
@@ -50,7 +16,7 @@
 
 @font-face {
     font-family: "GT-Walsheim";
-    src: url("/fonts/GT-Walsheim/GT-Walsheim-Light-Oblique-Trial.woff2") format("woff2");
+    src: url("/fonts/GT-Walsheim/GT-Walsheim-LC-Light-Oblique.woff2") format("woff2");
     font-weight: 300;
     font-style: oblique;
     font-display: swap;
@@ -59,7 +25,7 @@
 /* Regular */
 @font-face {
     font-family: "GT-Walsheim";
-    src: url("/fonts/GT-Walsheim/GT-Walsheim-Regular-Trial.woff2") format("woff2");
+    src: url("/fonts/GT-Walsheim/GT-Walsheim-LC-Regular.woff2") format("woff2");
     font-weight: 400;
     font-style: normal;
     font-display: swap;
@@ -67,7 +33,7 @@
 
 @font-face {
     font-family: "GT-Walsheim";
-    src: url("/fonts/GT-Walsheim/GT-Walsheim-Regular-Oblique-Trial.woff2") format("woff2");
+    src: url("/fonts/GT-Walsheim/GT-Walsheim-LC-Regular-Oblique.woff2") format("woff2");
     font-weight: 400;
     font-style: oblique;
     font-display: swap;
@@ -76,7 +42,7 @@
 /* Medium */
 @font-face {
     font-family: "GT-Walsheim";
-    src: url("/fonts/GT-Walsheim/GT-Walsheim-Medium-Trial.woff2") format("woff2");
+    src: url("/fonts/GT-Walsheim/GT-Walsheim-LC-Medium.woff2") format("woff2");
     font-weight: 500;
     font-style: normal;
     font-display: swap;
@@ -84,7 +50,7 @@
 
 @font-face {
     font-family: "GT-Walsheim";
-    src: url("/fonts/GT-Walsheim/GT-Walsheim-Medium-Oblique-Trial.woff2") format("woff2");
+    src: url("/fonts/GT-Walsheim/GT-Walsheim-LC-Medium-Oblique.woff2") format("woff2");
     font-weight: 500;
     font-style: oblique;
     font-display: swap;
@@ -93,7 +59,7 @@
 /* Bold */
 @font-face {
     font-family: "GT-Walsheim";
-    src: url("/fonts/GT-Walsheim/GT-Walsheim-Bold-Trial.woff2") format("woff2");
+    src: url("/fonts/GT-Walsheim/GT-Walsheim-LC-Bold.woff2") format("woff2");
     font-weight: 700;
     font-style: normal;
     font-display: swap;
@@ -101,42 +67,8 @@
 
 @font-face {
     font-family: "GT-Walsheim";
-    src: url("/fonts/GT-Walsheim/GT-Walsheim-Bold-Oblique-Trial.woff2") format("woff2");
+    src: url("/fonts/GT-Walsheim/GT-Walsheim-LC-Bold-Oblique.woff2") format("woff2");
     font-weight: 700;
-    font-style: oblique;
-    font-display: swap;
-}
-
-/* Ultra-Bold */
-@font-face {
-    font-family: "GT-Walsheim";
-    src: url("/fonts/GT-Walsheim/GT-Walsheim-Ultra-Bold-Trial.woff2") format("woff2");
-    font-weight: 800;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: "GT-Walsheim";
-    src: url("/fonts/GT-Walsheim/GT-Walsheim-Ultra-Bold-Oblique-Trial.woff2") format("woff2");
-    font-weight: 800;
-    font-style: oblique;
-    font-display: swap;
-}
-
-/* Black */
-@font-face {
-    font-family: "GT-Walsheim";
-    src: url("/fonts/GT-Walsheim/GT-Walsheim-Black-Trial.woff2") format("woff2");
-    font-weight: 900;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: "GT-Walsheim";
-    src: url("/fonts/GT-Walsheim/GT-Walsheim-Black-Oblique-Trial.woff2") format("woff2");
-    font-weight: 900;
     font-style: oblique;
     font-display: swap;
 }
@@ -459,7 +391,14 @@ section.cover div.content h1 {
     letter-spacing: -0.025em;
     color: #ffffff;
     text-align: center;
-    max-width: calc(var(--sec-vwu) * 25);
+}
+
+section.cover div.content h1 .small {
+    font-size: calc(var(--sec-vwu) * 8);
+}
+
+section.cover div.content h1 .medium {
+    font-size: calc(var(--sec-vwu) * 10);
 }
 
 section.cover div.content h2 {
@@ -540,7 +479,6 @@ section.cover div.content p {
     font-weight: 300 !important;
     text-align: left;
     color: white;
-    width: 55px;
     line-height: 1.2;
 }
 
@@ -923,7 +861,14 @@ main .section-bg {
         line-height: 0.85;
         font-weight: 700;
         font-size: calc(var(--sec-vwu) * 30);
-        max-width: calc(var(--sec-vwu) * 65);
+    }
+
+    section.cover div.content h1 .small {
+        font-size: calc(var(--sec-vwu) * 16);
+    }
+
+    section.cover div.content h1 .medium {
+        font-size: calc(var(--sec-vwu) * 24);
     }
 
     section.cover div.content h2 {
