update network to arbitrum

--- a/website/src/_includes/layouts/token.html
+++ b/website/src/_includes/layouts/token.html
@@ -232,7 +232,7 @@
                     }
                 }
 
-                const selectedNetwork = 'hoodi'; // Options: 'ethereum', 'arbitrum', 'hoodi'
+                const selectedNetwork = 'arbitrum'; // Options: 'ethereum', 'arbitrum', 'hoodi'
                 const networks = {
                     ethereum: {
                         chainId: '0x1',
@@ -241,7 +241,7 @@
                     },
                     arbitrum: {
                         chainId: '0xa4b1',
-                        minterAddress: '',
+                        minterAddress: '0x386E2B9f5d5c17049a1ADaf62928b3f3C834Ff28',
                         explorerHost: 'arbiscan.io'
                     },
                     hoodi: {
