--- a/website/src/_includes/navbar.html
+++ b/website/src/_includes/navbar.html
@@ -7,8 +7,8 @@
 {% endfor %}
 
 <header id="navbar">
-    <a href="/{{ '' if lang == 'en' else lang }}" class="logo flex dark:hidden ltr:mr-auto rtl:ml-auto"><img src="/img/new/logo-light.png" alt="logo" /></a>
-    <a href="/{{ '' if lang == 'en' else lang }}" class="logo hidden dark:flex ltr:mr-auto rtl:ml-auto"><img src="/img/new/logo-dark.png" alt="logo" /></a>
+    <a href="/{{ '' if lang == 'en' else lang }}" class="logo flex dark:hidden ltr:mr-auto rtl:ml-auto"><img src="/img/new/logo-light.png" alt="logo"></a>
+    <a href="/{{ '' if lang == 'en' else lang }}" class="logo hidden dark:flex ltr:mr-auto rtl:ml-auto"><img src="/img/new/logo-dark.png" alt="logo"></a>
 
     <nav id="menu">
         <ul>
@@ -111,6 +111,9 @@
     </nav>
 
     <div class="right-links">
+        <a class="box-btn token md:hidden" href="/token">
+            {{ 'navbar-token' | i18n({}, lang) }}
+        </a>
         <button href="#" class="theme-switch-btn">
             <svg class="sun" width="469" height="469" viewBox="0 0 469 469" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M225.768 1.44594C220.301 3.84594 214.701 10.6459 213.768 15.9793C213.234 18.3793 213.101 31.7126 213.368 45.7126L213.768 71.1793L217.634 76.1126C226.701 88.1126 242.968 87.5793 252.301 75.0459C254.968 71.5793 255.101 69.5793 255.101 42.2459C255.101 14.9126 254.968 12.9126 252.301 9.44594C250.834 7.44594 248.034 4.51261 246.168 3.17928C241.768 -0.154057 231.101 -1.08739 225.768 1.44594Z"/>
@@ -150,14 +153,10 @@
                                 <li>
                                     {% if language.flag %}
                                         <a href="{% completeRoute {url:page.url,lang:language.label} %}" class="flag-anchor">
-                                            <img src="{{ language.flag }}" alt="" srcset="">
                                             <p>{{ language.name }}</p>
                                         </a>
                                     {% else %}
                                         <a href="{% completeRoute {url:page.url,lang:language.label} %}" class="flag-anchor">
-                                            <div style="background-color:{{ language.iconBg }}; color:{{ language.textColor }}; width:21.33px; height:16px">
-                                                <p style="text-align:center; font-size:7px">{{ language.iconText }}</p>
-                                            </div>
                                             <p>{{ language.name }}</p>
                                         </a>
                                     {% endif %}
@@ -171,14 +170,10 @@
                             <li>
                                 {% if language.flag %}
                                     <a href="{% completeRoute {url:page.url,lang:language.label} %}" class="flag-anchor">
-                                        <img src="{{ language.flag }}" alt="" srcset="">
                                         <p>{{ language.name }}</p>
                                     </a>
                                 {% else %}
                                     <a href="{% completeRoute {url:page.url,lang:language.label} %}" class="flag-anchor">
-                                        <div style="background-color:{{ language.iconBg }}; color:{{ language.textColor }}; width:21.33px; height:16px">
-                                            <p style="text-align:center; font-size:7px">{{ language.iconText }}</p>
-                                        </div>
                                         <p>{{ language.name }}</p>
                                     </a>
                                 {% endif %}
